--- a/Likod/vercel.json
+++ b/Likod/vercel.json
@@ -2,13 +2,13 @@
     "version": 2,
     "builds": [
         {
-            "src": "server.js",
+            "src": "*.js",
             "use": "@vercel/node"
         }
         ],
         "routes": [
         {
-            "src": "/",
+            "src": "/(.*)",
             "dest": "/"
         }
         ]        
